pagina integrantes, pagina Bio e ajustes de footer

--- a/index.html
+++ b/index.html
@@ -283,23 +283,23 @@
 				<!-- footer-cols -->
 				<ul class="footer-cols">
 					<li class="col">
-						<h6>CATEGORIES</h6>
+						<!-- <h6>CATEGORIES</h6>
 						<ul>
 							<li><a href="#">WEBDESIGN</a></li>
 							<li><a href="#/">WORDPRESS</a></li>
 							<li><a href="#">PHOTO</a></li>
 							<li><a href="#">CODING</a></li>
-						</ul>
+						</ul> -->
 					</li>
 					<li class="col">
-						<h6>PAGES</h6>
+						<!-- <h6>PAGES</h6>
 						<ul>
 							<li><a href="#">HOW TO CUSTOMIZE THIS TEMPLATE</a></li>
 							<li><a href="#">5 ESSENTIALS RULES</a></li>
 							<li><a href="#">LOREM IPSUM DOLOR</a></li>
-						</ul>
+						</ul> -->
 					</li>
-					<li class="col">
+					<!-- <li class="col">
 						<h6>FREE TEMPLATES &amp; THEMES</h6>
 						<p>Get tons of free high quality templates at <a href="http://templatecreme.com">Template Creme</a>.</p>
 					</li>	
@@ -310,7 +310,7 @@
 							<li><a href="#">5 ESSENTIALS RULES</a></li>
 							<li><a href="#">LOREM IPSUM DOLOR</a></li>
 						</ul>
-					</li>		
+					</li>		 -->
 				</ul>
 				<!-- ENDS footer-cols -->
 			</div>
