Ajustes nos menus para deixar apenas as páginas ativas por enquanto

--- a/gallery.html
+++ b/gallery.html
@@ -100,27 +100,27 @@
 
 						</li>
 						<li><a href="about.html">BIO</a>
-							<ul>
+							<!--<ul>
 								<li><a href="about.html">O Contracantos</a></li>
 								<li><a href="about-styled.html">STYLED</a></li>
 								<li><a href="about-more.html">MORE</a></li>
 								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
 								<li><a href="about-accordion.html">ACCORDION</a></li>
 								<li><a href="appearance.html">APPEARANCE</a></li>
-							</ul>
+							</ul>-->
 						</li>
-						<li><a href="portfolio.html">PORTFOLIO</a></li>
+						<!--<li><a href="portfolio.html">PORTFOLIO</a></li>-->
 						<li class="current_page_item" ><a href="gallery.html">GALERIA</a>
-							<ul>
+							<!--<ul>
 								<li><a href="gallery.html">FOUR COLS</a></li>
 								<li><a href="gallery-3.html">THREE COLS</a></li>
 								<li><a href="gallery-2.html">TWO COLS</a></li>
-							</ul>
+							</ul>-->
 						</li>
-						<li ><a href="blog.html">AGENDA</a></li>
-						<li><a href="contact.html">CONTATO</a></li>
+						<!--<li ><a href="blog.html">AGENDA</a></li>
+						<li><a href="contact.html">CONTATO</a></li>-->
 						<li><a href="staff.html">INTEGRANTES</a></li>
-						<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>
+						<!--<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>-->
 					</ul>
 				</div>
 				<!-- ENDS navigation -->
