--- a/staff.html
+++ b/staff.html
@@ -71,7 +71,7 @@
 	<body>
 
 		<!-- HEADER -->
-		<div id="home-header">
+		<div id="header">
 		<div class="degree">
 			<!-- wrapper -->
 			<div class="wrapper">
@@ -102,27 +102,27 @@
 
 						</li>
 						<li><a href="about.html">BIO</a>
-							<ul>
+							<!--<ul>
 								<li><a href="about.html">O Contracantos</a></li>
 								<li><a href="about-styled.html">STYLED</a></li>
 								<li><a href="about-more.html">MORE</a></li>
 								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
 								<li><a href="about-accordion.html">ACCORDION</a></li>
 								<li><a href="appearance.html">APPEARANCE</a></li>
-							</ul>
+							</ul>-->
 						</li>
-						<li><a href="portfolio.html">PORTFOLIO</a></li>
+						<!--<li><a href="portfolio.html">PORTFOLIO</a></li>-->
 						<li><a href="gallery.html">GALERIA</a>
-							<ul>
+							<!--<ul>
 								<li><a href="gallery.html">FOUR COLS</a></li>
 								<li><a href="gallery-3.html">THREE COLS</a></li>
 								<li><a href="gallery-2.html">TWO COLS</a></li>
-							</ul>
+							</ul>-->
 						</li>
-						<li ><a href="blog.html">AGENDA</a></li>
-						<li><a href="contact.html">CONTATO</a></li>
+						<!--<li ><a href="blog.html">AGENDA</a></li>
+						<li><a href="contact.html">CONTATO</a></li>-->
 						<li class="current_page_item"><a href="staff.html">INTEGRANTES</a></li>
-						<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>
+						<!--<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>-->
 					</ul>
 				</div>
 				<!-- ENDS navigation -->
@@ -144,7 +144,7 @@
 					<!-- title -->
 					<div class="title-holder">
 						<span class="title">Integrantes</span>
-						<span class="subtitle">Conheca os integrantes do nosso grupo.</span>
+						<span class="subtitle">Conheca os integrantes do nosso grupo</span>
 					</div>
 					<!-- ENDS title -->
 
