pagina INTEGRANTES concluida

--- a/staff.html
+++ b/staff.html
@@ -165,7 +165,38 @@
 												<div class="contact">Maestro e Diretor</div>
 											</div>
 											<div>
-												<p> BLA BLA BLA BLA BLA BLA BLA	</p>
+												<p> Flávio Medeiros é licenciado em música pela Universidade Federal de Pernambuco. Foi aluno de regência de Osman Gióia (Brasil) e Wesley Ross 
+													(EUA). Recebeu bolsa de estudos do governo americano obtendo o 
+
+													Bacharelado em Música pelo Berkshire Christian College em Massachussets. 
+
+													Atuou como pianista e regente auxiliar do Berkshire Choir excursionando pelo 
+
+													norte e nordeste dos Estados Unidos e alguns países da Europa. Foi pianista 
+
+													do Coral Presbiteriano excursionando pela Coréia, China e Japão.  Em 1997 
+
+													obteve o grau de Mestre em Educação Musical pelo Conservatório Brasileiro de 
+
+													Música, Rio de Janeiro. Foi fundador e professor de Educação Musical na 
+
+													Escola de Música das Graças. Professor e Coordenador Pedagógico do 
+
+													Conservatório Pernambucano de Música. Obteve os três diplomas de 
+
+													especialização em educação musical ORFF SHULWERK pela Eastman School 
+
+													of Music – Nova Iorque. Na UFPE é professor de Iniciação Musical, Prática de 
+
+													Conjunto e Canto Coral. É diretor musical do Conjunto Txaimus, no qual 
+
+													desenvolve o projeto Chimes e a Música Popular Brasileira. Rege o Coro 
+
+													Universitário da UFPE e o coro OPUS2. É membro da Academia 
+
+													Pernambucana de Música. Em 2013 concluiu o doutorado em Educação pela 
+
+													Universidad Del Mar, Chile.	</p>
 											</div>
 										</div>
 									</li>
@@ -175,7 +206,7 @@
 								</div>
 							</div>
 
-						<h5 class="toggle-trigger custom"><a href="#">Integrantes</a></h5>
+						<h5 class="toggle-trigger custom"><a href="#">Cantores</a></h5>
 							<div class="toggle-container">
 							    <div class="block">
 									<li>
@@ -186,7 +217,9 @@
 												<div class="contact">Mezzo-soprano</div>
 											</div>
 											<div>
-												<p>	Natural de Recife, Pernambuco. Estudou Flauta transversal no Centro Profissionalizante de Criatividade Musical do Recife e no Conservatório Pernambucano de Música, com os professores Rogério Acioli e George Albert.  É formada em Bacharel em Música Sacra pelo Seminário Batista do Norte do Brasil. Fez parte do grupo de performance corporal TAMBACAC e do Côro OPUS2 , sob orientação dos professores Maria Aida Barroso e Flávio Medeiros, respectivamente.   Como flautista, participa dos grupos Dell’Armonia Antiqüa e Sonoro Ofício, grupos de música antiga, dirigidos por Gaston Gerônimo (Uruguai) e Sérgio Dias, respectivamente. Teve aulas com Rosângela Lima, Ricardo Kanji e Lawrence Pottier.  Como cantora, participa do grupo Contracantos, sob orientação do professor Flávio Medeiros, e do Ópera Stúdio UFPE, sob direção de Adriano Pinheiro. Apresentou-se no festival de Ópera de Oaxaca/México em 2015, e participou da turnê nacional 2014 do musical O nosso Villa, da companhia Ária Social.  É pós-graduada em Musicoterapia pela FACHO, sob orientação de Carmem Vasconcelos.  Atualmente é aluna do curso de licenciatura em música pela UFPE.</p>
+												<p>	Natural de Recife, Pernambuco. Estudou Flauta transversal no Centro Profissionalizante de Criatividade Musical do Recife e no Conservatório Pernambucano de Música, com os professores Rogério Acioli e George Albert.  É formada em Bacharel em Música Sacra pelo Seminário Batista do Norte do Brasil. Fez parte do grupo de performance corporal TAMBACAC e do Côro OPUS2 , sob orientação dos professores Maria Aida Barroso e Flávio Medeiros, respectivamente.   Como flautista, participa dos grupos Dell’Armonia Antiqüa e Sonoro Ofício, grupos de música antiga, dirigidos por Gaston Gerônimo (Uruguai) e Sérgio Dias, respectivamente. Teve aulas com Rosângela Lima, Ricardo Kanji e Lawrence Pottier.  Como cantora, participa do grupo Contracantos, sob orientação do professor Flávio Medeiros, e do Ópera Stúdio UFPE, sob direção de Adriano Pinheiro. Apresentou-se no festival de Ópera de Oaxaca/México em 2015, e participou da turnê nacional 2014 do musical O nosso Villa, da companhia Ária Social.  É pós-graduada em Musicoterapia pela FACHO, sob orientação de Carmem Vasconcelos.  Atualmente é aluna do curso de licenciatura em música pela UFPE.
+												
+												</p>
 											</div>
 										</div>
 									</li>
@@ -210,7 +243,7 @@
 												<div class="contact">Soprano</div>
 											</div>
 											<div>
-												<p>UAHSUSAIANI COJANOJCJO J IBDIBIADIAHDIABDHBA HDB HAB HJABDHABDHABHBADB
+												<p>Bacharel em Canto pela UFPE, participou de masterclasses com Ilem Vargas, Karine Serafin, Martin Krasnenko, Suzanna Simonka (na França), entre outros. Foi preparadora vocal do Coro da UFPE de 2001 a 2004 e, nesta universidade, foi professora substituta de Canto e Tecnica vocal por 3 anos. Tambem foi Instrutora de Técnica Vocal no Coro Transpetro da Petrobras de 2010 à Julho de 2014. Ja participou de diversos concertos e recitais como Ensemble Vocal Contracantos – St Antoine l’Abbaye – França (2003), Recital Inaugural – Coro do CEMO (2003), Encontro de Coros SESC – Coro do CEMO (2004), Carmina Burana – Cartl Orff – OSR (2003), Fantasia em Dó Menor – Ludwig van Beethoven - OSR (2004), Contracantos e Arabiando – West Virginia University – EUA (2006), Ópera Dido e Eneas, Solista da Ópera O Morcego (2010), Solista da peça ”Para Louvor e Glória” no Recital de Regência de Gerônimo Brito, Recital Brahms e List – Coro OPUS II (2013), Ópera Don Giovanni pela CORE (2013). Mais recentemente, atuou como solista na Opera “O Pescador e sua Alma”, no papel da Bruxa. Hoje, integra os coros Contracantos e Opus2, ambos regidos pelo maestro Flavio Medeiros. 
 												</p>
 											</div>
 										</div>
@@ -248,7 +281,7 @@
 										<div class="information">
 											<div class="header">
 												<div class="name">Mariane Mariz</div>
-												<div class="contact">Mezzo-Soprano</div>
+												<div class="contact">Soprano</div>
 											</div>
 											<div>
 												<p> Iniciou seus estudos musicais no coro juvenil do Colégio Marista São Luis e em aulas de teoria musical na escola Musicale. Participou do Coro Universitário da UFPE de 2008 a 2011 se apresentando sob a regência de Flávio Medeiros em peças como Carmina Burana de Carl Orff, Réquiem de Mozart, Glória de John Rutter e outras. Desde 2010 faz parte do coro Opus 2 do Departamento de Música da UFPE, também regido por Flávio Medeiros, tendo apresentado como corista o Magnificat de Bach, a Grande Missa Nordestina de Clóvis Pereira, o Martírio de São Sebastião de Debussy, Liebeslieder Waltzer de Brahms e outras peças. Participou do IX e X Encontro de Música Antiga de Recife / Olinda e da II e IV Mostra de Interpretação em Instrumentos Históricos, tendo Master Classes de canto e prática de conjunto com diversos professores nacionais e internacionais. Participou como solista de diversas montagens de óperas profissionais e estudantis: A Flauta Mágica de Mozart (como a segunda dama) em 2012, Gianni Schicchi de Puccini (como Lauretta), A Médium de Menotti (como Sra. Gobineau), Les Plaisirs de Versailles de Charpentier (como a Música) e O Pescador e Sua Alma de Marcos Lucas (como a sereia). Estuda canto lírico em aulas particulares desde 2010 com Virgínia Cavalcanti.
@@ -418,7 +451,7 @@
 										<div class="block">
 
 										<li>
-											<img src="img/adriana.png" alt="Pic" />
+											<img src="img/carlos.png" alt="Pic" />
 											<div class="information">
 												<div class="header">
 													<div class="name">Carlos Silva</div>
@@ -430,19 +463,81 @@
 											</div>
 										</li>
 										<li>
-											<img src="img/adriana.png" alt="Pic" />
+											<img src="img/ecenilson.png" alt="Pic" />
 											<div class="information">
 												<div class="header">
 													<div class="name">Ecenilson Dias</div>
 													<div class="contact">Flautista transversal</div>
 												</div>
 												<div>
-													<p>	BLABLABLA.</p>
+													<p>	Natural de Caruaru-PE, cresceu na Cidade de Cupira localizada no interior do
+
+														Estado de Pernambuco. Iniciou seus estudos em música na Banda Municipal de Cupira 
+
+														no ano de 2001, onde estudou flauta transversal com o Maestro Emiliano Lopes de Melo. 
+
+														Em 2008 ingressou no curso Regular em Flauta Transversal no Conservatório 
+
+														Pernambucano de Música situado na Cidade do Recife, em seguida no ano de 2010 
+
+														passou no teste de seleção para o Curso técnico em instrumento da mesma instituição. 
+
+														Estudou a flauta transversal no Conservatório Pernambucano de Música com 
+
+														Frederica Bourgois, e posteriormente com o professor George Albert que por sua vez, 
+
+														foi o responsável para orientá-lo até a conclusão do curso técnico no ano de 2013.
+
+														Atualmente estuda flauta transversal com o Professor Mestre Jonathan Guimarães 
+
+														no curso de Licenciatura em Música com ênfase em Flauta Transversal na Universidade 
+
+														Federal de Pernambuco.
+
+														Participou de vários masterclasses e festivais, entre eles se destacam o 
+
+														masterclasse realizado na Sala São Paulo com o grande flautista Emmanuel Pahud, XII 
+
+														Festival Internacional de Flautistas em Belém-PA com o renomado professor de flauta 
+
+														Jim Lyman, XIII Festival Internacional de Flautistas em Vitória-ES com o espetacular 
+
+														professor James Hall, e o masterclasse com o Professor José Ananias Souza Lopes, 
+
+														promovido pelo SESC-Natal na Escola de Música da UFRN, e o XVII Festival Música 
+
+														nas Montanhas realizado na cidade de Poços de Caldas-MG, tendo como professor 
+
+														titular o renomado Danilo Mezzadri.
+
+														Entre suas experiências profissionais destacam-se a participação na Orquestra 
+
+														Sinfônica do Conservatório Pernambucano de Música, Orquestra Sinfônica Jovem de 
+
+														Pernambuco, Orquestra Sinfônica Menino Cidadão, Orquestra de Câmara Vicentti 
+
+														Fittipaldi, Orquestra Sinfônica da Universidade Federal de Pernambuco, Banda 
+
+														Sinfônica do Centro de Educação Musical de Olinda, Ópera Don Giovanni, Opereta a 
+
+														Noiva do Condutor, Antúlio Madureira e o grupo Contracantos e Contraventos. Foi 
+
+														convidado pelos alunos da disciplina Composição da UFPE para interpretar as músicas 
+
+														criadas pelos mesmos, para o Recital de Músicas Contemporâneas dos alunos da 
+
+														Universidade Federal de Pernambuco, assim como, executou uma composição no 
+
+														Recital do Professor Sueudo Fernandes. 
+
+														Participa também como professor de flauta transversal e iniciação musical na 
+
+														Escola BSB Musical e Escola Municipal de Artes João Pernambuco.</p>
 												</div>
 											</div>
 										</li>
 										<li>
-											<img src="img/adriana.png" alt="Pic" />
+											<img src="img/edileusa.png" alt="Pic" />
 											<div class="information">
 												<div class="header">
 													<div class="name">Edileusa Tavares</div>
@@ -454,7 +549,7 @@
 											</div>
 										</li>
 										<li>
-											<img src="img/adriana.png" alt="Pic" />
+											<img src="img/edson.png" alt="Pic" />
 											<div class="information">
 												<div class="header">
 													<div class="name">Edson Silva</div>
@@ -466,7 +561,7 @@
 											</div>
 										</li>
 										<li>
-											<img src="img/adriana.png" alt="Pic" />
+											<img src="img/john.png" alt="Pic" />
 											<div class="information">
 												<div class="header">
 													<div class="name">John Mello</div>
