Colocando fotos do paço na página inicial

--- a/index.html
+++ b/index.html
@@ -249,25 +249,25 @@
 						</div>
 						<ul class="blocks-holder">
 							<li class="block">
-								<a href="img/gallery/historia/foto1.png"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/paco-frevo/foto6.jpg"rel="prettyPhoto[gallery]">
 								<span></span>
-								<img src="img/gallery/historia/small/foto1.png" /></a>
+								<img src="img/gallery/paco-frevo/small/foto6.jpg" /></a>
 								<!-- <a href="gallery.html" ><img src="img/dummies/home-block-2.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a> -->
 							</li>
 							<li class="block">
-								<a href="img/gallery/historia/foto2.png"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/paco-frevo/foto2.jpg"rel="prettyPhoto[gallery]">
 								<span></span>
-								<img src="img/gallery/historia/small/foto2.png" /></a>
+								<img src="img/gallery/paco-frevo/small/foto2.jpg" /></a>
 							</li>
 							<li class="block">
-								<a href="img/gallery/historia/foto3.png"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/paco-frevo/foto3.jpg"rel="prettyPhoto[gallery]">
 								<span></span>
-								<img src="img/gallery/historia/small/foto3.png" /></a>
+								<img src="img/gallery/paco-frevo/small/foto3.jpg" /></a>
 							</li>
 							<li class="block">
-								<a href="img/gallery/historia/foto4.png"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/paco-frevo/foto4.jpg"rel="prettyPhoto[gallery]">
 								<span></span>
-								<img src="img/gallery/historia/small/foto4.png" /></a>
+								<img src="img/gallery/paco-frevo/small/foto4.jpg" /></a>
 							</li>
 						</ul>
 					</div>
