ajustes agenda home

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 									Grupo vocal pernambucano criado em 2002 pelo maestro Flávio Medeiros. Já tendo se apresentado no Nordeste do Brasil
 									e em outros países como França, Suíça e Estados Unidos, o CONTRACANTOS tem um repertório centrado em peças de compositores
 									brasileiros mas que se estende pelos diversos estilos e períodos da história da música universal.
-									<a href="about.html" target="_blank" >Leia mais...</a>
+									<a href="about.html" >Leia mais...</a>
 								</div>
 
 							</li>
@@ -190,24 +190,24 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="#">Recital Hospital das Clinicas</a></div>
+										<div class="block-title"><a href="#">Recital - Hospital das Clinicas</a></div>
 										<div class="block-date">19 de Abril de 2016 </div>
 									</div>
 									<div class="right"></div>
 								</div>
-								<a href="about.html" ><img src="img/dummies/home-block-1.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
 							</li>
-							<li class="block">
+							<li class="block">	
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="#">Recital Escola de Artes Joao Pernambuco</a></div>
+										<div class="block-title"><a href="#">Recital - Escola de Artes João Pernambuco</a></div>
 										<div class="block-date">2 de Maio de 2016</div>
 									</div>
 									<div class="right"></div>
 								</div>
-								<a href="about.html" ><img src="img/dummies/home-block-2.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
 							</li>
-							<li class="block">
+							<!-- <li class="block">
 								<div class="block-ribbon">
 									<div class="left">
 										<div class="block-title"><a href="#">A LOREM IPSUM LOREM IPSUM</a></div>
@@ -226,7 +226,7 @@
 									<div class="right"></div>
 								</div>
 								<a href="about.html" ><img src="img/dummies/home-block-1.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 					<!-- ENDS front-left-col -->
