Retirando legenda das fotos de histórico, adicionando possibilidade de legenda para album, trocando o nome de SUE e destacando tag selecionada na galeria.

--- a/staff.html
+++ b/staff.html
@@ -401,7 +401,7 @@
 										<img src="img/suelayne.png" alt="Pic" />
 										<div class="information">
 											<div class="header">
-												<div class="name">Sue Ramos</div>
+												<div class="name">Sue</div>
 												<div class="contact">Soprano</div>
 											</div>
 											<div>
