Adicionando página de contatos

--- a/about.html
+++ b/about.html
@@ -116,9 +116,9 @@
 								<li><a href="gallery-2.html">TWO COLS</a></li>
 							</ul>-->
 						</li>
-						<!--<li ><a href="blog.html">AGENDA</a></li>
-						<li><a href="contact.html">CONTATO</a></li>-->
+						<!--<li ><a href="blog.html">AGENDA</a></li>-->
 						<li><a href="staff.html">INTEGRANTES</a></li>
+						<li><a href="contact.html">CONTATO</a></li>
 						<!--<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>-->
 					</ul>
 				</div>
