--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 								<li><a href="gallery-2.html">TWO COLS</a></li>
 							</ul>-->
 						</li>
-						<!--<li ><a href="blog.html">AGENDA</a></li>
-						<li><a href="contact.html">CONTATO</a></li>-->
+						<!--<li ><a href="blog.html">AGENDA</a></li>-->
 						<li><a href="staff.html">INTEGRANTES</a></li>
+						<li><a href="contact.html">CONTATO</a></li>
 						<!--<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>-->
 					</ul>
 				</div>
@@ -197,7 +197,7 @@
 								</div>
 								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
 							</li>
-							<li class="block">	
+							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
 										<div class="block-title"><a href="#">Recital - Escola de Artes João Pernambuco</a></div>
