--- a/staff.html
+++ b/staff.html
@@ -119,9 +119,9 @@
 								<li><a href="gallery-2.html">TWO COLS</a></li>
 							</ul>-->
 						</li>
-						<!--<li ><a href="blog.html">AGENDA</a></li>
-						<li><a href="contact.html">CONTATO</a></li>-->
+						<!--<li ><a href="blog.html">AGENDA</a></li>-->
 						<li class="current_page_item"><a href="staff.html">INTEGRANTES</a></li>
+						<li><a href="contact.html">CONTATO</a></li>
 						<!--<li><a href="http://luiszuno.com/blog/downloads/simple-template ">DOWNLOAD</a></li>-->
 					</ul>
 				</div>
