Adicionando links pro site da ufpe

--- a/contact.html
+++ b/contact.html
@@ -187,8 +187,8 @@
 							<!-- ENDS form -->
 
 							<h4>ENDEREÇO</h4>
-							<p>Departamento de Música - Centro de Artes e Comunicação (CAC)<br/>
-							Universidade Federal de Pernambuco (UFPE)<br/>
+							<p><a href="https://www.ufpe.br/musica/" target="_blank">Departamento de Música</a> - Centro de Artes e Comunicação (CAC)<br/>
+							Universidade Federal de Pernambuco (<a href="https://www.ufpe.br/" target="_blank">UFPE</a>)<br/>
 							Av. Prof. Moraes Rego, 1235 - Cidade Universitária<br/>
 							Recife - PE - CEP: 50670-901</p>
 
