Adicionando logos da ufpe e dep. de música

--- a/contact.html
+++ b/contact.html
@@ -249,6 +249,17 @@
 						<!-- ENDS social bar -->
 						<!-- footer-cols -->
 						<ul class="footer-cols">
+							<li class="large-col">
+								<div id="wrapper-apoio">
+									<div id="apoio">APOIO</div>
+									<div id="logoDmus">
+										<a href="http://www.ufpe.br/musica" target="_blank"><img src="img/logo-dep-mus.png"/></a>
+									</div>
+									<div id="logoUfpe">
+										<a href="http://www.ufpe.br/" target="_blank"><img src="img/ufpe.png"/></a>
+									</div>
+								</div>
+							</li>
 							<li class="col">
 								<!-- <h6>CATEGORIES</h6>
 								<ul>
