--- a/index.html
+++ b/index.html
@@ -249,25 +249,25 @@
 						</div>
 						<ul class="blocks-holder">
 							<li class="block">
-								<a href="img/gallery/paco-frevo/foto6.jpg"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/paco-frevo/foto3.jpg" rel="prettyPhoto[gallery]" title="Paço do Frevo">
 								<span></span>
-								<img src="img/gallery/paco-frevo/small/foto6.jpg" /></a>
+								<img src="img/gallery/paco-frevo/small/foto3.jpg" alt="Paço do Frevo" title="Paço do Frevo"/></a>
 								<!-- <a href="gallery.html" ><img src="img/dummies/home-block-2.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a> -->
 							</li>
 							<li class="block">
-								<a href="img/gallery/paco-frevo/foto2.jpg"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/paco-frevo/foto2.jpg" rel="prettyPhoto[gallery]"  title="Paço do Frevo">
 								<span></span>
-								<img src="img/gallery/paco-frevo/small/foto2.jpg" /></a>
+								<img src="img/gallery/paco-frevo/small/foto2.jpg" alt="Paço do Frevo" title="Paço do Frevo"/></a>
 							</li>
 							<li class="block">
-								<a href="img/gallery/paco-frevo/foto3.jpg"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/pescador/foto (49).jpg"rel="prettyPhoto[gallery]" title="O Pescador e sua Alma">
 								<span></span>
-								<img src="img/gallery/paco-frevo/small/foto3.jpg" /></a>
+								<img src="img/gallery/pescador/small/foto (49).jpg" alt="O Pescador e sua Alma" title="O Pescador e sua Alma"/></a>
 							</li>
 							<li class="block">
-								<a href="img/gallery/paco-frevo/foto4.jpg"rel="prettyPhoto[gallery]">
+								<a href="img/gallery/historia/foto3.png"rel="prettyPhoto[gallery]" title="História">
 								<span></span>
-								<img src="img/gallery/paco-frevo/small/foto4.jpg" /></a>
+								<img src="img/gallery/historia/small/foto3.png" alt="História" title="História"/></a>
 							</li>
 						</ul>
 					</div>
@@ -308,10 +308,23 @@
 						<li ><a href="https://www.facebook.com/Contracantos-272699886224067/?fref=ts" target="_blank" title="Facebook"><i style="color:#3B5998" class="fa fa-facebook-square fa-lg"></i></a></li>
 						<li ><a href="https://www.youtube.com/channel/UCH-Zl_1jcgUHEvh-dSJxBGA" target="_blank" title="Youtube"><i  style="color:#E52D27"class="fa fa-youtube-play fa-lg"></i></a></li>
 					</ul>
+
+
 				</div>
 				<!-- ENDS social bar -->
 				<!-- footer-cols -->
 				<ul class="footer-cols">
+					<li class="large-col">
+						<div id="wrapper-apoio">
+							<div id="apoio">APOIO</div>
+							<div id="logoDmus">
+								<a href="http://www.ufpe.br/musica" target="_blank"><img src="img/logo-dep-mus.png"/></a>
+							</div>
+							<div id="logoUfpe">
+								<a href="http://www.ufpe.br/" target="_blank"><img src="img/ufpe.png"/></a>
+							</div>
+						</div>
+					</li>
 					<li class="col">
 						<!-- <h6>CATEGORIES</h6>
 						<ul>
