Adicionando Tainá como contraventos

--- a/staff.html
+++ b/staff.html
@@ -572,7 +572,18 @@
 												</div>
 											</div>
 										</li>
-
+										<li>
+											<img src="img/taina.jpg" alt="Pic" />
+											<div class="information">
+												<div class="header">
+													<div class="name">Tainá Menezes</div>
+													<div class="contact">Percussionista</div>
+												</div>
+												<div>
+													<p>Iniciou seus estudos em música aos 7 anos de idade no Conservatório Pernambucano de Música. Hoje, com 24 anos, é musicista do grupo artístico Txaimus (UFPE), do grupo de percussão LapTop (UFPE), integrante do Grupo de Maracatu Quebra-Baque e graduanda em Licenciatura em Música pela Universidade Federal de Pernambuco. Estuda bateria desde os 14 anos no Conservatório Pernambucano de Música, e teve como professores Ebel Perreli, Márcio Silva e Hugo Medeiros. Desde 2015 estuda percussão popular com Jerimum de Olinda e percussão erudita com Antônio Barreto. Em busca de atualizar suas práticas pedagógicas e artísticas participou de cursos livres desde 2013, dentre eles: “Conscientização Polirrítmica: Aplicações da Linha Rítmica para Arranjo, Composição e Improvisação” (UFPE-2013) e da Oficina de Gestos Sonoros com Fernando Barba, do Grupo Barbatuques (UFPE- 2015). Concluiu o Curso de Áudio Profissional (CAP) de André Vieira Sonoda (Acústica, Elétrica, Equipamentos de Som e Sistemas de Som) e o Curso básico em Pro-Tools também no CAP -2013. Tem experiência com produção de eventos como participante da Equipe de Produção da Semana da música 2013, 2014 e 2015 (UFPE) e como Assistente de Produção do espetáculo “Mariza Johnson, 80 anos” (2015). Participa como bolsista do Projeto de Iniciação à Docência PIBID/UFPE (CAPES) desde 2014.</p>
+												</div>
+											</div>
+										</li>
 										</div>
 								</div>
 							</h5>
