Adicionando página do povo brasileiro cantos do nordeste

--- a/about.html
+++ b/about.html
@@ -108,7 +108,16 @@
 								<li><a href="appearance.html">APPEARANCE</a></li >
 							</ul>-->
 						</li>
-						<!--<li><a href="portfolio.html">PORTFOLIO</a></li>-->
+						<li><a href="#">PORTFOLIO</a>
+							<ul>
+								<li><a href="portfolio-povo-brasileiro.html">POVO BRASILEIRO: CANTOS DO NORDESTE</a></li>
+								<!--<li><a href="about-styled.html">STYLED</a></li>
+								<li><a href="about-more.html">MORE</a></li>
+								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
+								<li><a href="about-accordion.html">ACCORDION</a></li>
+								<li><a href="appearance.html">APPEARANCE</a></li>-->
+							</ul>
+						</li>
 						<li><a href="gallery.html">GALERIA</a>
 							<!--<ul>
 								<li><a href="gallery.html">FOUR COLS</a></li>
