--- a/index.html
+++ b/index.html
@@ -107,7 +107,16 @@
 								<li><a href="appearance.html">APPEARANCE</a></li>
 							</ul> -->
 						</li>
-						<!--<li><a href="portfolio.html">PORTFOLIO</a></li>-->
+						<li><a href="#">PORTFOLIO</a>
+							<ul>
+								<li><a href="portfolio-povo-brasileiro.html">POVO BRASILEIRO: CANTOS DO NORDESTE</a></li>
+								<!--<li><a href="about-styled.html">STYLED</a></li>
+								<li><a href="about-more.html">MORE</a></li>
+								<li><a href="about-toggle.html">TOGGLE BOX</a></li>
+								<li><a href="about-accordion.html">ACCORDION</a></li>
+								<li><a href="appearance.html">APPEARANCE</a></li>-->
+							</ul>
+						</li>
 						<li><a href="gallery.html">GALERIA</a>
 							<!--<ul>
 								<li><a href="gallery.html">FOUR COLS</a></li>
@@ -138,15 +147,16 @@
 					<!-- slideshow -->
 					<div id="slideshow">
 						<a href="#" id="prev"></a>
-	          			<a href="#" id="next"></a>
-						<a href="" id="slideshow-link" ><span></span></a>
+	          <a href="#" id="next"></a>
+						<!-- <a href="" id="slideshow-link" ><span></span></a>-->
 						<!-- slides -->
 						<ul id="slides">
-			                <li><a href="#1"><img src="images/1.jpg"  alt="Imagen" /></a></li>
-			                <li><a href="#2"><img src="images/2.jpg"  alt="Imagen" /></a></li>
-			                <li><a href="#3"><img src="images/3.jpg"  alt="Imagen" /></a></li>
-			          	</ul>
-			          	<!-- ENDS slides -->
+								<li><a href="portfolio-povo-brasileiro.html"><img src="images/banner-povo-brasileiro-patro.jpg" alt="Imagen" /></a></li>
+                <li><a href="#1"><img src="images/1.jpg"  alt="Imagen" /></a></li>
+                <li><a href="#2"><img src="images/2.jpg"  alt="Imagen" /></a></li>
+                <li><a href="#3"><img src="images/3.jpg"  alt="Imagen" /></a></li>
+          	</ul>
+          	<!-- ENDS slides -->
 					</div>
 					<!-- ENDS slideshow -->
 					<!-- headline -->
@@ -190,8 +200,8 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="#">Recital - Hospital das Clinicas</a></div>
-										<div class="block-date">19 de Abril de 2016 </div>
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Recital - Hospital das Clinicas</a></div>
+										<div class="block-date">Recife, 3 de Maio de 2016 </div>
 									</div>
 									<div class="right"></div>
 								</div>
@@ -200,8 +210,68 @@
 							<li class="block">
 								<div class="block-ribbon">
 									<div class="left">
-										<div class="block-title"><a href="#">Recital - Escola de Artes João Pernambuco</a></div>
-										<div class="block-date">2 de Maio de 2016</div>
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Recital - Escola de Artes João Pernambuco</a></div>
+										<div class="block-date">Recife, 17 de Maio de 2016</div>
+									</div>
+									<div class="right"></div>
+								</div>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+							</li>
+							<li class="block">
+								<div class="block-ribbon">
+									<div class="left">
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Instituto dos Cegos</a></div>
+										<div class="block-date">Recife, 31 de Maio de 2016</div>
+									</div>
+									<div class="right"></div>
+								</div>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+							</li>
+							<li class="block">
+								<div class="block-ribbon">
+									<div class="left">
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Espace Paul Jargot, en Crolles</a></div>
+										<div class="block-date">Grenoble, 18 de Junho de 2016</div>
+									</div>
+									<div class="right"></div>
+								</div>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+							</li>
+							<li class="block">
+								<div class="block-ribbon">
+									<div class="left">
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">St-Hugues de Chartreuse</a></div>
+										<div class="block-date">Grenoble, 19 de Junho de 2016</div>
+									</div>
+									<div class="right"></div>
+								</div>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+							</li>
+							<li class="block">
+								<div class="block-ribbon">
+									<div class="left">
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Espace Claretière Fontanil</a></div>
+										<div class="block-date">Grenoble, 23 de Junho de 2016</div>
+									</div>
+									<div class="right"></div>
+								</div>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+							</li>
+							<li class="block">
+								<div class="block-ribbon">
+									<div class="left">
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Temple du Change</a></div>
+										<div class="block-date">Lyon, 24 de Junho de 2016</div>
+									</div>
+									<div class="right"></div>
+								</div>
+								<a href="about.html" ><img src="img/dummies/block_home_agenda.jpg" alt="Thumb" class="thumb" title="Thumbnail" /> </a>
+							</li>
+							<li class="block">
+								<div class="block-ribbon">
+									<div class="left">
+										<div class="block-title"><a href="portfolio-povo-brasileiro.html">Espace Claretière Fontanil</a></div>
+										<div class="block-date">Paris, 1 de Julho de 2016</div>
 									</div>
 									<div class="right"></div>
 								</div>
